[gd_scene load_steps=11 format=2]

[ext_resource path="res://Objects/Level.gd" type="Script" id=1]
[ext_resource path="res://Objects/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/KeyboardController1.gd" type="Script" id=4]
[ext_resource path="res://Objects/AIController.gd" type="Script" id=5]
[ext_resource path="res://Objects/KeyboardController2.gd" type="Script" id=6]
[ext_resource path="res://res/Button Font.tres" type="DynamicFont" id=7]
[ext_resource path="res://Objects/Spawner.gd" type="Script" id=8]
[ext_resource path="res://assets/grabber.png" type="Texture" id=9]
[ext_resource path="res://Objects/LevelEnvironment.tscn" type="PackedScene" id=10]

[node name="Level" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Ball" parent="." index="0" instance=ExtResource( 2 )]

editor/display_folded = true
modulate = Color( 0.40625, 1, 0, 1 )
position = Vector2( 964.637, 131.106 )
scale = Vector2( 0.5, 0.5 )
z_index = -1
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="Sprite" parent="Ball" index="1"]

position = Vector2( 0, 0 )
scale = Vector2( 0.65, 0.65 )
_sections_unfolded = [ "Animation", "Region", "Transform" ]

[node name="Area2D" parent="Ball" index="2"]

_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" parent="Ball/Area2D" index="0"]

position = Vector2( 0, 0 )
scale = Vector2( 2.2, 2.2 )

[node name="Player" parent="." index="1" instance=ExtResource( 3 )]

modulate = Color( 0, 1, 1, 1 )
position = Vector2( 75, 360 )
z_index = 1
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]

[node name="Player2" parent="." index="2" instance=ExtResource( 3 )]

modulate = Color( 0.945313, 0, 1, 1 )
position = Vector2( 1205, 360 )
z_index = 1
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]

[node name="KeyboardController1" type="Node" parent="." index="3"]

script = ExtResource( 4 )

[node name="AIController" type="Node" parent="." index="4"]

script = ExtResource( 5 )

[node name="KeyboardController2" type="Node" parent="." index="5"]

script = ExtResource( 6 )

[node name="PointsPlayer1" type="Label" parent="." index="6"]

modulate = Color( 0, 1, 1, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 383.0
margin_top = 613.0
margin_right = 428.0
margin_bottom = 677.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Rect", "Visibility", "custom_fonts" ]

[node name="PointsPlayer2" type="Label" parent="." index="7"]

modulate = Color( 0.945098, 0, 1, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 861.0
margin_top = 613.0
margin_right = 901.0
margin_bottom = 677.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility", "custom_colors", "custom_fonts" ]

[node name="Spawner" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 0.01
one_shot = false
autostart = false
script = ExtResource( 8 )

[node name="Debug Target" type="Sprite" parent="." index="9"]

visible = false
z_index = 8
texture = ExtResource( 9 )
_sections_unfolded = [ "Z Index" ]

[node name="WorldEnvironment" parent="." index="10" instance=ExtResource( 10 )]

[node name="PTW" type="Label" parent="." index="11"]

modulate = Color( 1, 0.703125, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_top = 10.0
margin_right = 1216.0
margin_bottom = 53.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
text = "Points to win: "
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility", "custom_fonts" ]

[connection signal="collide_with_something" from="Ball" to="AIController" method="_on_Ball_collide_with_something"]

[connection signal="collision_detected" from="Player" to="AIController" method="_on_Player_collision_detected"]

[connection signal="timeout" from="Spawner" to="Spawner" method="_on_Spawner_timeout"]


[editable path="Ball"]
